--- a/examples/landing.html
+++ b/examples/landing.html
@@ -6,15 +6,27 @@
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- TUKTUK -->
-    <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/tuktuk.theme.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.layout.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.grid.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.flexbox.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.font.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.form.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.button.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.nav.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.table.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.list.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.widget.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.icon.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.media.css">
+    <!-- TUKTUK.THEME -->
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.theme.css">
 </head>
 <body>
 <!-- ========================== HEADER ========================== -->
-<header class="bck darkest padding top bottom">
+<header class="bck darkest padding_top padding_bottom">
     <div class="row text color white shadow">
         <div class="column _3">
-            <h2 class="logo">tuk<span class="text book">tuk</span></h2>
+            <a href="http://tuktuk.tapquo.com" class="logo text normal color white">tuk<span class="text book">tuk</span></a>
         </div>
         <nav class="column _7 offset_2 text right">
             <a href="#" class="button "><span class="icon user"></span>Login</a>
@@ -27,7 +39,7 @@
     <div class="row">
         <div class="column _8 offset_2">
             <h2 class="text book ">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-            <h6 class="text normal margin all">
+            <h6 class="text normal margin">
             tuktuk Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit beatae similique ex reprehenderit doloribus quasi magnam reiciendis vitae culpa minus modi aspernatur eius temporibus quas corrupti architecto error labore soluta.</h6>
 
             <h5 class="text thin">
@@ -45,7 +57,7 @@
 
 <!-- ========================== Features ========================== -->
 <section class="bck light features">
-    <div class="row text center thin margin bottom">
+    <div class="row text center thin margin_bottom">
         <div class="column _8 offset_2">
             <h1 class="text book color theme">Built for designers and agencies</h1>
             <h4>
@@ -55,26 +67,26 @@ workflow of web designers. It’s more than just a slogan for us.
         </div>
     </div>
     <br/>
-    <div class="row text center book margin top">
+    <div class="row text center book">
         <div class="column _3">
-            <span class="icon users text color theme margin bottom"></span>
+            <span class="icon users text color theme margin_bottom"></span>
             <h5 class="">Smooth workflows</h5>
             <small>Create accounts with limited interaction from your clients. Send them a link to enter their payment info, and they’re good to go.</small>
         </div>
         <div class="column _3">
-            <span class="icon locked text color theme margin bottom"></span>
+            <span class="icon locked text color theme margin_bottom"></span>
 
             <h5>A single login</h5>
             <small>Access all of your clients’ sites with a single FTP login. No need to remember 50 different usernames and passwords.</small>
         </div>
         <div class="column _3">
-            <span class="icon lab text color theme margin bottom"></span>
+            <span class="icon lab text color theme margin_bottom"></span>
 
             <h5>Demo sites are free</h5>
             <small>Easily test out changes and preview them for your clients, before publishing them to the live site.</small>
         </div>
         <div class="column _3">
-            <span class="icon bars text color theme margin bottom"></span>
+            <span class="icon bars text color theme margin_bottom"></span>
 
             <h5>Earn recurring income</h5>
             <small>Make money each month for the clients you host with Slidus. No need to pass around affiliate links or referral codes.</small>
@@ -84,7 +96,7 @@ workflow of web designers. It’s more than just a slogan for us.
 
 <!-- ========================== Infraestructure ========================== -->
 <section class="bck contrast">
-    <div class="row text thin center margin top bottom">
+    <div class="row text thin center">
         <div class="column _10 offset_1">
             <h1>Lorem ipsum dolor sit amet</h1>
             <h4>
@@ -97,11 +109,11 @@ workflow of web designers. It’s more than just a slogan for us.
 
 <!-- ========================== Launching ========================== -->
 <section class="bck darkest landing">
-    <div class="row text color white center margin top bottom">
+    <div class="row text color white center">
         <div class="column _10 offset_1">
             <h2 class="text bold">We're launching soon</h2>
             <h4 class="text book italic">Join tuk<span class="text bold">tuk</span></h4>
-            <a href="#" class="button large margin top">Yes, please!</a>
+            <a href="#" class="button large margin_top">Yes, please!</a>
 
         </div>
     </div>
@@ -109,39 +121,39 @@ workflow of web designers. It’s more than just a slogan for us.
 
 <!-- ========================== Authors ========================== -->
 <section class="bck dark">
-    <div class="row text center color white margin bottom">
+    <div class="row text center color white">
         <div class="column _10 offset_1">
-            <h1 class="text book">Folks team</h1>
+            <h2 class="text book">Folks team</h2>
             <h4 class="text thin">
-                Slidus is a new product of <a href="http://tapquo.com" target="_blank">tapquo</a>, is a genius brainchild of our CTO <a href="https://twitter.com/soyjavi" target="_blank" class="text color white normal">Javi Jimenez</a>, and is lovingly crafted by himself, Ignacio Olalde, Oihane Merino and Janire Noguerol.
+                Slidus is a new product of <a href="http://tapquo.com" target="_blank">tapquo</a>, is a idea of our CTO <a href="https://twitter.com/soyjavi" target="_blank" class="text color white normal">Javi</a>, and is lovingly crafted by himself, <span class="text normal">Ina</span>, <span class="text normal">Oihane</span> and <span class="text normal">Janire</span>.
             </h4>
         </div>
     </div>
 
     <div class="row text center">
-       <div class="column _3 padding all">
-            <img src="http://tapquo.com/images/team-javi.jpg" class="responsive rounded margin bottom"/>
+       <div class="column _3 padding">
+            <img src="http://tapquo.com/images/team-javi.jpg" class="responsive rounded margin_bottom"/>
             <br/>
             <a href="https://twitter.com/soyjavi" class="twitter-follow-button " data-show-count="false" data-dnt="true">Follow @soyjavi</a>
            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
        </div>
 
-       <div class="column _3 padding all">
-            <img src="http://tapquo.com/images/team-ina.jpg" class="responsive rounded margin bottom"/>
+       <div class="column _3 padding">
+            <img src="http://tapquo.com/images/team-ina.jpg" class="responsive rounded margin_bottom"/>
             <br/>
             <a href="https://twitter.com/piniphone" class="twitter-follow-button " data-show-count="false" data-dnt="true">Follow @piniphone</a>
            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
        </div>
 
-       <div class="column _3 padding all">
-            <img src="http://tapquo.com/images/team-oihane.jpg" class="responsive rounded margin bottom"/>
+       <div class="column _3 padding">
+            <img src="http://tapquo.com/images/team-oihane.jpg" class="responsive rounded margin_bottom"/>
             <br/>
             <a href="https://twitter.com/oihi08" class="twitter-follow-button " data-show-count="false" data-dnt="true">Follow @oihi08</a>
            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
        </div>
 
-       <div class="column _3 padding all">
-            <img src="http://tapquo.com/images/team-janire.jpg" class="responsive rounded margin bottom"/>
+       <div class="column _3 padding">
+            <img src="http://tapquo.com/images/team-janire.jpg" class="responsive rounded margin_bottom"/>
             <br/>
             <a href="https://twitter.com/janixy91" class="twitter-follow-button " data-show-count="false" data-dnt="true">Follow @janixy91</a>
            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -150,7 +162,7 @@ workflow of web designers. It’s more than just a slogan for us.
 </section>
 
 <footer class="bck darkest text color white">
-    <div class="row margin top bottom">
+    <div class="row ">
         <div class="column _4">
             <p class="text bold">Made by TAPQUO</p>
             <small>We are a new mobile user experiences company located in Bilbao, Spain. We've put over 12 years of experience building web products & services with a lot of coffee.</small>
