--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <nav class="column _6 offset_3 text normal right">
             <a href="#"><span class="icon twitter"></span>Tweet me</a>
-            <a href="#" class="button">Download</a>
+            <a href="#" class="button small">Download</a>
         </nav>
     </div>
 </header>
@@ -43,11 +43,13 @@
     <div class="row">
         <div class="column _10 offset_1">
             <h1 class="text normal">tuk<span class="text thin">tuk</span></h1>
+
             <h3 class="margin bottom">This is not another front-end framework ... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
             <a href="#" class="button large margin bottom">Download tuktuk</a>
+
             <nav class=>
-                <a href="https://github.com/soyjavi/tuktuk" target="_blank" class="margin right text color white">GitHub Project</a>
-                <a href="examples/" class="margin right text color white">Examples</a>
+                <a href="https://github.com/soyjavi/tuktuk" target="_blank" class="margin_right text color white">GitHub Project</a>
+                <a href="examples/" class="margin_right text color white">Examples</a>
                 <span>Version 0.1.0</span>
             </nav>
         </div>
@@ -57,7 +59,7 @@
 
 <!-- ========================== FEATURES ========================== -->
 <section class="bck light features">
-    <div class="row text center margin bottom">
+    <div class="row text center margin_bottom">
         <div class="column _8 offset_2">
             <h1 class="text color theme">A new kid on the block</h1>
             <h4 class="text thin">
@@ -65,7 +67,7 @@
             </h4>
         </div>
     </div>
-    <div class="row text center book margin top">
+    <div class="row text center book margin_top">
 
         <div class="column _3">
             <h1 class="icon css3 text color theme"></h1>
@@ -94,40 +96,40 @@
 <!-- ========================== COLUMNS ========================== -->
 <section class="bck lightest text center">
     <div class="row ">
-        <div class="column _10 offset_1 margin bottom">
+        <div class="column _10 offset_1 margin_bottom">
             <h1 class="text color theme">Columns <strike>960</strike> 1200 column</h1>
             <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
          </div>
     </div>
-    <div class="row margin bottom">
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
-        <div class="column _1 bck light padding all">1</div>
+    <div class="row margin_bottom">
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
+        <div class="column _1 bck light padding">1</div>
     </div>
-    <div class="row margin bottom">
-        <div class="column _4 bck light padding all">4</div>
-        <div class="column _4 bck light padding all">4</div>
-        <div class="column _4 bck light padding all">4</div>
+    <div class="row margin_bottom">
+        <div class="column _4 bck light padding">4</div>
+        <div class="column _4 bck light padding">4</div>
+        <div class="column _4 bck light padding">4</div>
     </div>
-    <div class="row margin bottom">
-        <div class="column _4 bck light padding all ">4</div>
-        <div class="column _8 bck light padding all">8</div>
+    <div class="row margin_bottom">
+        <div class="column _4 bck light padding ">4</div>
+        <div class="column _8 bck light padding">8</div>
     </div>
-    <div class="row margin bottom">
-        <div class="column _6 bck light padding all">6</div>
-        <div class="column _6 bck light padding all">6</div>
+    <div class="row margin_bottom">
+        <div class="column _6 bck light padding">6</div>
+        <div class="column _6 bck light padding">6</div>
     </div>
     <div class="row">
-        <div class="column _12 bck light padding all">12</div>
+        <div class="column _12 bck light padding">12</div>
     </div>
 </section>
 
@@ -135,29 +137,29 @@
 <!-- ========================== OFFSETS ========================== -->
 <section class="bck light text center">
     <div class="row ">
-        <div class="column _10 offset_1 margin bottom">
+        <div class="column _10 offset_1 margin_bottom">
             <h1 class="text color theme">Offsetting columns</h1>
             <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
          </div>
     </div>
 
-    <div class="row margin bottom">
-        <div class="column _4 bck lightest padding all">4</div>
-        <div class="column _4 offset_4 bck dark text color white padding all">4 with 4 offset</div>
+    <div class="row margin_bottom">
+        <div class="column _4 bck lightest padding">4</div>
+        <div class="column _4 offset_4 bck dark text color white padding">4 with 4 offset</div>
     </div>
-    <div class="row margin bottom">
-        <div class="column _3 offset_3 bck dark text color white padding all">3 with 3 offset</div>
-        <div class="column _3 offset_3 bck dark text color white padding all">3 with 3 offset</div>
+    <div class="row margin_bottom">
+        <div class="column _3 offset_3 bck dark text color white padding">3 with 3 offset</div>
+        <div class="column _3 offset_3 bck dark text color white padding">3 with 3 offset</div>
     </div>
     <div class="row">
-        <div class="column _8 offset_4 bck dark text color white padding all">8 with 4 offset</div>
+        <div class="column _8 offset_4 bck dark text color white padding">8 with 4 offset</div>
     </div>
 </section>
 
 
 <!-- ========================== HEADINGS ========================== -->
 <section class="bck lightest">
-    <div class="row margin bottom">
+    <div class="row margin_bottom">
         <div class="column _10 offset_1 text center">
             <h1 class="text color theme">Headings</h1>
             <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
@@ -178,7 +180,7 @@
 <!-- ========================== BUTTONS ========================== -->
 <section class="bck light">
     <div class="row ">
-        <div class="column _10 offset_1 text center margin bottom">
+        <div class="column _10 offset_1 text center margin_bottom">
             <h1 class="text color theme">Buttons</h1>
             <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
          </div>
@@ -194,7 +196,7 @@
               <a href="#" class="button tiny">Tiny</a>
           </div>
         <div class="column _4">
-            <a href="#" class="button anchor margin top">Anchor</a>
+            <a href="#" class="button anchor margin_top">Anchor</a>
         </div>
     </div>
     <div class="row">
@@ -208,7 +210,7 @@
               <a href="#" class="button tiny"><span class="icon firefox"></span>Tiny</a>
           </div>
         <div class="column _4">
-            <a href="#" class="button anchor margin top"><span class="icon checkmark"></span>Anchor</a>
+            <a href="#" class="button anchor margin_top"><span class="icon checkmark"></span>Anchor</a>
         </div>
     </div>
 </section>
@@ -217,7 +219,7 @@
 <!-- ========================== LISTS ========================== -->
 <section>
     <div class="row">
-        <div class="column _10 offset_1 text center margin bottom">
+        <div class="column _10 offset_1 text center margin_bottom">
             <h1 class="text color theme">Lists</h1>
             <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
          </div>
@@ -298,7 +300,7 @@
 
 <!-- ========================== FORMS & TABLES ========================== -->
 <section class="bck light">
-     <div class="row margin bottom">
+     <div class="row margin_bottom">
             <div class="column _10 offset_1 text center">
             <h1 class="text color theme">Forms & Tables</h1>
             <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
@@ -335,13 +337,13 @@
                             <input type="radio" name="radio2" /><span>No</span>
                         </fieldset>
 
-                        <fieldset class="margin bottom">
+                        <fieldset class="margin_bottom">
                             <label>Check Boxes:</label>
                             <input type="checkbox" name="radio1" /><span>One</span>
                             <input type="checkbox" name="radio2" /><span>Two</span>
                         </fieldset>
 
-                        <button class="success margin right"><span class="icon mail"></span>Send</button>
+                        <button class="success margin_right"><span class="icon mail"></span>Send</button>
                         <button class="alert"><span class="icon cancel"></span>Cancel</button>
                     </form>
                 </div>
@@ -396,7 +398,7 @@
 
 <!-- ========================== Show & hide ========================== -->
 <section class="bck lightest ">
-    <div class="row margin bottom">
+    <div class="row margin_bottom">
         <div class="column _10 offset_1 text center ">
             <h1 class="text color theme">Show & Hide</h1>
             <h3 class="text thin">There are times when you may need to only show something on a desktop and not a tablet & phone or the reverse. I've done the work for you with some extra classes to hide & show content.</h3>
@@ -444,7 +446,7 @@
 <!-- ========================== Typography ========================== -->
 <section class="bck lightest">
     <div class="row ">
-        <div class="column _10 offset_1 text center margin bottom">
+        <div class="column _10 offset_1 text center margin_bottom">
             <h1 class="text color theme">Typography</h1>
             <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
          </div>
@@ -493,16 +495,16 @@
 
 <!-- ========================== AUTHOR ========================== -->
 <section class="bck dark">
-    <div class="row margin bottom">
+    <div class="row margin_bottom">
         <div class="column _10 offset_1 text center color white">
             <h1>Author</h1>
             <h3 class="text thin">Javi Jimenez is the CTO and CO-founder of <a href="http://tapquo.com">tapquo</a>. A restless mind that always strives for continuous improvement, able to create frameworks like <a href="http://lungo.tapquo.com">Lungo</a>, <a href="http://quojs.tapquo.com">QuoJS</a>, <a href="http://monocle.tapquo.com">Monocle</a> used by thousands of developers around the world.</h3>
          </div>
      </div>
 
-    <div class="row margin bottom">
+    <div class="row margin_bottom">
         <div class="column _4 offset_4 text center white">
-            <img src="http://tapquo.com/images/social/soyjavi.jpeg" class="responsive rounded margin bottom"/>
+            <img src="http://tapquo.com/images/social/soyjavi.jpeg" class="responsive rounded margin_bottom"/>
             <br/>
             <a href="https://twitter.com/soyjavi" class="twitter-follow-button " data-show-count="true" data-dnt="true">Follow @soyjavi</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -513,7 +515,7 @@
 
 <!-- ========================== FOOTER ========================== -->
 <footer class="bck darkest text color white">
-    <div class="row margin top bottom">
+    <div class="row margin_top bottom">
         <div class="column _4">
             <p class="text bold">Made by TAPQUO</p>
             <small>We are a mobile user experiences company located in Bilbao, Spain. We've put over 12 years of experience building products.</small>
