Changes for example/item.html

--- a/examples/item.html
+++ b/examples/item.html
@@ -34,36 +34,42 @@
         </div>
         <nav class="column _6 offset_3 text normal right">
             <a href="#">
-                <img src="http://dribbble.s3.amazonaws.com/users/24447/avatars/small/chanporito.png?1352858686" class="avatar small"/>
+                <img src="http://dribbble.s3.amazonaws.com/users/24447/avatars/small/chanporito.png?1352858686" class="avatar "/>
                 Profile</a>
         </nav>
     </div>
 </header>
 
-<div class="bck dark text color white padding top bottom">
+<div class="bck dark text color white padding_top padding_bottom">
     <div class="row">
         <div class="column _12">
-            <h1>Item</h1>
-            <h5>Description</h5>
+            <img src="http://tapquo.com/images/team-javi.jpg" class="avatar big float left margin_right"/>
+
+            <h1>
+                Javi Jiménez
+                <nav class="float right">
+                    <a href="#" class="button">Follow</a>
+                </nav>
+            </h1>
+            <h5>http://tapquo.com</h5>
         </div>
     </div>
 </div>
 
-<section>
+<section class="padding_top">
     <div class="row">
         <div class="column _8">
             <h1>
                 Item
                 <nav class="float right">
-                    <a href="#">d</a>
-                    <a href="#">b</a>
-                    <a href="#" class="button">d</a>
+                    <a href="#">Option</a>
+                    <a href="#">Option</a>
+                    <a href="#" class="button small">Like</a>
+                    <a href="#" class="button small cancel">Cancel</a>
                 </nav>
             </h1>
             <small>
-                Description by <a href="#" class="text normal underline">soyjavi</a>
-                <br/>
-                <a href="#" class="text normal ">http://tuktuk.tapquo.com</a>
+                Description by <a href="#" class="text bold">soyjavi</a>
             </small>
             <hr/>
 
@@ -72,12 +78,17 @@
             </div>
 
 
-        <h4 class="margin_top">Comments</h4>
+        <h4 class="margin_top">
+            Comments
+            <nav class="float right">
+                <a href='#' class='button small'>New Message</a>
+            </nav>
+        </h4>
         <hr class="margin_bottom"/>
 
-        <div class="row margin_bottom">
+        <div class="row">
             <div class="column _1">
-                <img src="http://dribbble.s3.amazonaws.com/users/24447/avatars/small/chanporito.png?1352858686" class="avatar medium"/>
+                <img src="http://tapquo.com/images/team-javi.jpg" class="avatar medium"/>
             </div>
             <div class="column _7 message">
                 <strong class="display block text bold color theme">Javi Jimenez</strong>
@@ -86,12 +97,12 @@
             </div>
         </div>
 
-        <div class="row margin_bottom">
+        <div class="row">
             <div class="column _1">
-                <img src="http://dribbble.s3.amazonaws.com/users/24447/avatars/small/chanporito.png?1352858686" class="avatar medium"/>
+                <img src="http://tapquo.com/images/team-aitor.jpg" class="avatar medium"/>
             </div>
             <div class="column _7">
-                <strong class="display block">Javi says</strong>
+                <strong class="display block text bold color theme">Aitor Jimenez</strong>
                 <small>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem reiciendis commodi mollitia vel iusto itaque praesentium exercitationem quis nesciunt amet nostrum quos et deleniti numquam officiis. Suscipit quaerat dolore optio.
                 </small>
@@ -126,13 +137,12 @@
 <footer class="bck dark text color white">
     <div class="row">
       <div class="column _4">
-        <p>Site content © 2012 Tapquo, inc.</p>
+        <small>Site content © 2012 Tapquo, inc.</small>
       </div>
-      <div class="column _8 text float right">
-          <a href="#" class="text color white margin right">Home</a>
+      <nav class="column _8 text float right">
+          <a href="#" class="text color white">Home</a>
           <a href="#" class="text color white">Download</a>
-        </ul>
-      </div>
+      </nav>
     </div>
 </footer>
 </body>
