--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
               <a href="#" class="button large">Large</a>
               <a href="#" class="button ">Normal</a>
               <a href="#" class="button secondary">Secondary</a>
-              <a href="#" class="button success">Success</a>
-              <a href="#" class="button alert">Alert</a>
+              <a href="#" class="button accept">accept</a>
+              <a href="#" class="button cancel">cancel</a>
               <a href="#" class="button small">Small</a>
               <a href="#" class="button tiny">Tiny</a>
           </div>
@@ -204,8 +204,8 @@
               <a href="#" class="button large"><span class="icon html5"></span>Large</a>
               <a href="#" class="button "><span class="icon css3"></span>Normal</a>
               <a href="#" class="button secondary"><span class="icon safari"></span>Secondary</a>
-              <a href="#" class="button success"><span class="icon checkmark"></span>Success</a>
-              <a href="#" class="button alert"><span class="icon cancel"></span>Alert</a>
+              <a href="#" class="button accept"><span class="icon checkmark"></span>accept</a>
+              <a href="#" class="button cancel"><span class="icon cancel"></span>cancel</a>
               <a href="#" class="button small"><span class="icon chrome"></span>Small</a>
               <a href="#" class="button tiny"><span class="icon firefox"></span>Tiny</a>
           </div>
@@ -343,8 +343,8 @@
                             <input type="checkbox" name="radio2" /><span>Two</span>
                         </fieldset>
 
-                        <button class="success margin_right"><span class="icon mail"></span>Send</button>
-                        <button class="alert"><span class="icon cancel"></span>Cancel</button>
+                        <button class="accept margin_right"><span class="icon mail"></span>Send</button>
+                        <button class="cancel"><span class="icon cancel"></span>Cancel</button>
                     </form>
                 </div>
             </div>
@@ -458,8 +458,8 @@
             <h6>color normal</h6>
             <h6 class="text color theme">color theme</h6>
             <h6 class="text color secondary">color secondary</h6>
-            <h6 class="text color success">color success</h6>
-            <h6 class="text color alert">color alert</h6>
+            <h6 class="text color accept">color accept</h6>
+            <h6 class="text color cancel">color cancel</h6>
         </div>
         <div class="column _3">
             <h4>Style (.text)</h4>
@@ -486,8 +486,8 @@
             <h6 class="bck darkest text color white">darkest</h6>
 
             <h6 class="bck theme">theme</h6>
-            <h6 class="bck success">success</h6>
-            <h6 class="bck alert">alert</h6>
+            <h6 class="bck accept">accept</h6>
+            <h6 class="bck cancel">cancel</h6>
         </div>
     </div>
 </section>
